2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* as.h (as_dump_path_rel): New declaration.
	(as_dump_path) [! RM_INTERN]: New function.
	* as-lookup.c (as_dump_path_rel): Return void, don't take the
	type, writable, mode or rt parameters, infer them.

2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* anonymous.c (fault): When copying the storage in place, pass
	ANON->ACTIVITY, not META_DATA_ACTIVITY, to cap_copy_x.
	
2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* anonymous.c (mdestroy): Optimize storage destruction when MAP is
	the last reference.
	(destroy): Assert that PAGER has no allocated storage.

2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* map.c (map_split): Update SECOND->OFFSET.

2008-06-18  Neal H. Walfield  <neal@gnu.org>

	* anonymous.c (offset_compare): When calculating A_END, subtract
	one from A[1].  When calculating B_END, subtract one from B[1].
	(mdestroy): Correctly calculate the bounds.  Detach the node from
	the tree.

2008-06-18  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (exception_handler_normal): If the fault is
	unhandled, print the register state.
	(exception_handler_activated): Likewise.
	* ia32-exception-entry.S (EF_STACK_START): Don't define.
	(EF_SAVED_EAX): Define with an absolute value.
	(EF_SAVED_ECX): Likewise.
	(EF_SAVED_EDX): Likewise.
	(EF_SAVED_FLAGS): Likewise.
	(EF_SAVED_IP): Likewise.
	(EF_NEXT): Likewise.
	(EF_SAVED_EBX): New define.
	(EF_SAVED_EDI): New define.
	(EF_SAVED_ESI): New define.
	(exception_frame_run): Address the saved register values relative
	to ESP.  Also save EBX, EDI and ESI.

2008-06-18  Neal H. Walfield  <neal@gnu.org>

	* as.h (AS_CHECK_SHADOW): Don't fail if the kernel says the
	capability's type is void but everything else matches.

2008-06-18  Neal H. Walfield  <neal@gnu.org>

	* mmap.c (mmap): If MAP_FIXED is specified, first unmap the
	region.
	(mmap): Don't panic if we fail to create a pager, just return
	MAP_FAILED.

	* map.h (map_destroy_t): New define.